# NBA-analysis-app

./: .gitignore  README.md  initial_insert.py  myapp.py  pyproject.toml  test.py
docs/: db_design.md  requirements.md  ui_design.md
migrations/versions/: 46e53db72638_userテーブル追加.py  998a2d4d4a96_modify_playertable_fk.py  b3cc5661eac2_hash_length_change.py  b80ff3414dcc_add_created_at_column_to_team_model.py
templates/: base.html  login.html  player_list.html  signup.html  team_list.html  test.html
